--- a/shelter/index.html
+++ b/shelter/index.html
@@ -8,6 +8,29 @@
   <title>Cozy House</title>
 </head>
 <body>
-  
+  <header class="header">
+    <div class="navbar content-width">
+      <div class="logo-container">
+        <div class="logo-title">Cozy House</div>
+        <div class="logo-subtitle">Shelter for pets in Boston</div>
+      </div>
+      <nav class="nav-container">
+        <ul class="nav-list">
+          <li class="nav-item"><a class="link-common nav-link" href="#">About the shelter</a></li>
+          <li class="nav-item"><a class="link-common nav-link" href="#">Our pets</a></li>
+          <li class="nav-item"><a class="link-common nav-link" href="#">Help the shelter</a></li>
+          <li class="nav-item"><a class="link-common nav-link" href="#">Contacts</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="main">
+    <section class="not-only"></section>
+    <section class="about"></section>
+    <section class="our-friends"></section>
+    <section class="help"></section>
+    <section class="in-addition"></section>
+  </main>
+  <footer></footer>
 </body>
 </html>
