--- a/shelter/index.html
+++ b/shelter/index.html
@@ -25,7 +25,22 @@
     </div>
   </header>
   <main class="main">
-    <section class="not-only"></section>
+    <section class="not-only">
+      <div class="not-only-content content-width">
+        <div class="not-only-text-container">
+          <h1 class="not-only-heading">
+            Not only people need a house
+          </h1>
+          <div class="not-only-text">
+            We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
+          </div>
+          <button class="not-only-btn">
+            <a class="link-common not-only-link" href="#">Make a friend</a>
+          </button>
+        </div>
+        <div class="not-only-img"></div>
+      </div>
+    </section>
     <section class="about"></section>
     <section class="our-friends"></section>
     <section class="help"></section>
