feat: add our friends section

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -55,7 +55,48 @@
         </div>
       </div>
     </section>
-    <section class="our-friends"></section>
+    <section class="our-friends">
+      <div class="our-friends-content content-width">
+        <h3 class="our-friends-heading">Our friends who <br> 
+        are looking for a house</h3>
+        <div class="our-friends-slider">
+          <div class="slider-arrow arrow-left"></div>
+          <div class="slider">
+            <div class="card">
+              <div class="card-img card-img-1"></div>
+              <div class="card-info">
+                <div class="card-name">Katrine</div>
+                <div class="card-btn">
+                  <a class="link-common card-link" href="#">Learn more</a>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-img card-img-2"></div>
+              <div class="card-info">
+                <div class="card-name">Jennifer</div>
+                <div class="card-btn">
+                  <a class="link-common card-link" href="#">Learn more</a>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-img card-img-3"></div>
+              <div class="card-info">
+                <div class="card-name">Woody</div>
+                <div class="card-btn">
+                  <a class="link-common card-link" href="#">Learn more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider-arrow arrow-right"></div>
+        </div>
+        <div class="our-friends-btn">
+          <a class="link-common our-friends-link" href="#">Get to know the rest</a>
+        </div>
+      </div>
+    </section>
     <section class="help"></section>
     <section class="in-addition"></section>
   </main>
