feat: add help section

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -97,7 +97,50 @@
         </div>
       </div>
     </section>
-    <section class="help"></section>
+    <section class="help">
+      <div class="help-content content-width">
+        <h3 class="help-heading">How you can help <br>
+        our shelter</h3>
+        <div class="help-list">
+          <div class="help-item">
+            <div class="help-icon icon-pet-food"></div>
+            <div class="help-text">Pet food</div>
+          </div>
+          <div class="help-item">
+            <div class="help-icon icon-transportation"></div>
+            <div class="help-text">Transportation</div>
+          </div>
+          <div class="help-item">
+            <div class="help-icon icon-toys"></div>
+            <div class="help-text">Toys</div>
+          </div>
+          <div class="help-item">
+            <div class="help-icon icon-bowls-and-cups"></div>
+            <div class="help-text">Bowls and cups</div>
+          </div>
+          <div class="help-item">
+            <div class="help-icon icon-shampoos"></div>
+            <div class="help-text">Shampoos</div>
+          </div>
+          <div class="help-item">
+            <div class="help-icon icon-vitamins"></div>
+            <div class="help-text">Vitamins</div>
+          </div>
+          <div class="help-item">
+            <div class="help-icon icon-medicines"></div>
+            <div class="help-text">Medicines</div>
+          </div>
+          <div class="help-item">
+            <div class="help-icon icon-collars-leashes"></div>
+            <div class="help-text">Collars / leashes</div>
+          </div>
+          <div class="help-item">
+            <div class="help-icon icon-sleeping-area"></div>
+            <div class="help-text">Sleeping areas</div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="in-addition"></section>
   </main>
   <footer></footer>
