feat: add in addition section

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -141,7 +141,21 @@
         </div>
       </div>
     </section>
-    <section class="in-addition"></section>
+    <section class="in-addition">
+      <div class="in-addition-content content-width">
+        <div class="in-addition-img"></div>
+        <div class="in-addition-text">
+          <h3 class="in-addition-heading">You can also <br>
+          make a donation</h3>
+          <div class="in-addition-subheading">Name of the bank / Type of bank account</div>
+          <div class="in-addition-credit-card">
+            <div class="credit-card-img"></div>
+            <div><a class="credit-card-number link-common" href="#">8380 2880 8028 8791 7435</a></div>
+          </div>
+          <div class="in-addition-legal-info">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
