feat: add footer

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -157,6 +157,44 @@
       </div>
     </section>
   </main>
-  <footer></footer>
+  <footer class="footer">
+    <div class="footer-content content-width">
+      <div class="footer-contacts">
+        <div class="footer-title contacts-title">For questions and suggestions</div>
+        <div class="footer-container contacts-email-container">
+          <a class="email-link link-common" href="mailto:email@shelter.com">
+            <div class="contacts-email-icon"></div>
+          </a>
+          <div class="footer-text contacts-email-text">
+            <a class="email-link link-common" href="mailto:email@shelter.com">email@shelter.com</a>
+          </div>
+        </div>
+        <div class="footer-container contacts-phone-container">
+          <a href="tel:+136745677554">
+            <div class="contacts-phone-icon"></div>
+          </a>
+          <div class="footer-text contacts-phone-number">
+            <a class="phone-link link-common" href="tel:+136745677554">+13 674 567 75 54</a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-locations">
+        <div class="footer-title locations-title">We are waiting for your visit</div>
+        <div class="footer-container locations-container locations-container-boston">
+          <div class="locations-icon"></div>
+          <div class="footer-text locations-text">
+            <a class="link-common" href="https://goo.gl/maps/gTybNBvCqthiks7Z6" target="_blank">1 Central Street, Boston <br> (entrance from the store)</a>
+          </div>
+        </div>
+        <div class="footer-container locations-container locations-container-london">
+          <div class="locations-icon locations-icon2"></div>
+          <div class="footer-text locations-text">
+            <a class="link-common" href="https://goo.gl/maps/6fRNsAKacBsbEFyWA" target="_blank">18 South Park, London</a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-img"></div>
+    </div>
+  </footer>
 </body>
 </html>
