feat: add links

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -11,15 +11,15 @@
   <header class="header">
     <div class="navbar content-width">
       <div class="logo-container">
-        <div class="logo-title">Cozy House</div>
+        <div class="logo-title"><a class="link-common logo-link" href="#">Cozy House</a></div>
         <div class="logo-subtitle">Shelter for pets in Boston</div>
       </div>
       <nav class="nav-container">
         <ul class="nav-list">
-          <li class="nav-item"><a class="link-common nav-link" href="#">About the shelter</a></li>
-          <li class="nav-item"><a class="link-common nav-link" href="#">Our pets</a></li>
-          <li class="nav-item"><a class="link-common nav-link" href="#">Help the shelter</a></li>
-          <li class="nav-item"><a class="link-common nav-link" href="#">Contacts</a></li>
+          <li class="nav-item"><a class="link-common nav-link active" href="#">About the shelter</a></li>
+          <li class="nav-item"><a class="link-common nav-link" href="./pets.html">Our pets</a></li>
+          <li class="nav-item"><a class="link-common nav-link" href="#help">Help the shelter</a></li>
+          <li class="nav-item"><a class="link-common nav-link" href="#contacts">Contacts</a></li>
         </ul>
       </nav>
     </div>
@@ -34,9 +34,9 @@
           <div class="not-only-text">
             We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
           </div>
-          <button class="not-only-btn">
-            <a class="link-common not-only-link" href="#">Make a friend</a>
-          </button>
+          <div class="not-only-btn">
+            <a class="link-common not-only-link" href="#our-friends">Make a friend</a>
+          </div>
         </div>
         <div class="not-only-img"></div>
       </div>
@@ -55,7 +55,7 @@
         </div>
       </div>
     </section>
-    <section class="our-friends">
+    <section class="our-friends" id="our-friends">
       <div class="our-friends-content content-width">
         <h3 class="our-friends-heading">Our friends who <br> 
         are looking for a house</h3>
@@ -93,11 +93,11 @@
           <div class="slider-arrow arrow-right"></div>
         </div>
         <div class="our-friends-btn">
-          <a class="link-common our-friends-link" href="#">Get to know the rest</a>
+          <a class="link-common our-friends-link" href="./pets.html">Get to know the rest</a>
         </div>
       </div>
     </section>
-    <section class="help">
+    <section class="help" id="help">
       <div class="help-content content-width">
         <h3 class="help-heading">How you can help <br>
         our shelter</h3>
@@ -157,7 +157,7 @@
       </div>
     </section>
   </main>
-  <footer class="footer">
+  <footer class="footer" id="contacts">
     <div class="footer-content content-width">
       <div class="footer-contacts">
         <div class="footer-title contacts-title">For questions and suggestions</div>
