--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -28,10 +28,10 @@
   <main class="main">
     <div class="pets">
       <div class="pets-content content-width">
-        <div class="pets-heading">
+        <h1 class="pets-heading">
           Our friends who <br>
           are looking for a house
-        </div>
+        </h1>
         <div class="cards-container">
           <div class="card">
             <div class="card-img card-img-1"></div>
