--- a/shelter/index.html
+++ b/shelter/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style_queries.css">
   <title>Cozy House</title>
 </head>
 <body>
@@ -183,7 +184,7 @@
         <div class="footer-title locations-title">We are waiting for your visit</div>
         <div class="footer-container locations-container locations-container-boston">
           <div class="locations-icon"></div>
-          <div class="footer-text locations-text">
+          <div class="footer-text locations-text locations-boston">
             <a class="link-common" href="https://goo.gl/maps/gTybNBvCqthiks7Z6" target="_blank">1 Central Street, Boston <br> (entrance from the store)</a>
           </div>
         </div>
