feat: add media queries for 320 width main

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -16,6 +16,11 @@
         <div class="logo-title"><a class="link-common logo-link" href="#">Cozy House</a></div>
         <div class="logo-subtitle">Shelter for pets in Boston</div>
       </div>
+      <div class="burger-menu">
+        <span class="burger-line"></span>
+        <span class="burger-line"></span>
+        <span class="burger-line"></span>
+      </div>
       <nav class="nav-container">
         <ul class="nav-list">
           <li class="nav-item"><a class="link-common nav-link active" href="#">About the shelter</a></li>
