feat: add media queries for pets page

--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="./css/pets.css">
+  <link rel="stylesheet" href="./css/pets_queries.css">
   <title>Cozy House - Our Pets</title>
 </head>
 <body>
@@ -14,6 +15,11 @@
       <div class="logo-container">
         <div class="logo-title"><a class="link-common logo-link" href="./index.html">Cozy House</a></div>
         <div class="logo-subtitle">Shelter for pets in Boston</div>
+      </div>
+      <div class="burger-menu">
+        <span class="burger-line"></span>
+        <span class="burger-line"></span>
+        <span class="burger-line"></span>
       </div>
       <nav class="nav-container">
         <ul class="nav-list">
