fix: adjust not-only img

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -45,7 +45,9 @@
             <a class="link-common not-only-link" href="#our-friends">Make a friend</a>
           </div>
         </div>
-        <div class="not-only-img"></div>
+        <div class="not-only-img">
+          <img src="./assets/img/not-only-dog.png" alt="dog">
+        </div>
       </div>
     </section>
     <section class="about">
