feat: add overlay and no-scroll to open burger

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -10,29 +10,30 @@
   <title>Cozy House</title>
 </head>
 <body>
-  <header class="header">
-    <div class="navbar content-width">
-      <div class="logo-container">
-        <div class="logo-title"><a class="link-common logo-link" href="#">Cozy House</a></div>
-        <div class="logo-subtitle">Shelter for pets in Boston</div>
-      </div>
-      <div class="burger-menu">
-        <span class="burger-line"></span>
-        <span class="burger-line"></span>
-        <span class="burger-line"></span>
-      </div>
-      <nav class="nav-container">
-        <ul class="nav-list">
-          <li class="nav-item"><a class="link-common nav-link active" href="#">About the shelter</a></li>
-          <li class="nav-item"><a class="link-common nav-link" href="./pets.html">Our pets</a></li>
-          <li class="nav-item"><a class="link-common nav-link" href="#help">Help the shelter</a></li>
-          <li class="nav-item"><a class="link-common nav-link" href="#contacts">Contacts</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <div class="overlay"></div>
   <main class="main">
     <section class="not-only">
+      <header class="header">
+        <div class="navbar content-width">
+          <div class="logo-container">
+            <div class="logo-title"><a class="link-common logo-link" href="#">Cozy House</a></div>
+            <div class="logo-subtitle">Shelter for pets in Boston</div>
+          </div>
+          <div class="burger-menu">
+            <span class="burger-line"></span>
+            <span class="burger-line"></span>
+            <span class="burger-line"></span>
+          </div>
+          <nav class="nav-container">
+            <ul class="nav-list">
+              <li class="nav-item"><a class="link-common nav-link active" href="#">About the shelter</a></li>
+              <li class="nav-item"><a class="link-common nav-link" href="./pets.html">Our pets</a></li>
+              <li class="nav-item"><a class="link-common nav-link" href="#help">Help the shelter</a></li>
+              <li class="nav-item"><a class="link-common nav-link" href="#contacts">Contacts</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
       <div class="not-only-content content-width">
         <div class="not-only-text-container">
           <h1 class="not-only-heading">
