--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -10,6 +10,7 @@
   <title>Cozy House - Our Pets</title>
 </head>
 <body>
+  <div class="overlay"></div>
   <header class="header">
     <div class="navbar content-width">
       <div class="logo-container">
