feat: add popup

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/style_queries.css">
   <link rel="stylesheet" href="./css/slider-animation.css">
+  <link rel="stylesheet" href="./css/popup.css">
   <title>Cozy House</title>
 </head>
 <body>
   <div class="overlay"></div>
   <main class="main">
+    <div class="pets-popup"></div>
     <section class="not-only">
       <header class="header">
         <div class="navbar content-width">
@@ -189,7 +191,7 @@
       <div class="footer-img"></div>
     </div>
   </footer>
-  <script src="./script.js"></script>
   <script src="./slider.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
