--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="./css/pets.css">
   <link rel="stylesheet" href="./css/pets_queries.css">
+  <link rel="stylesheet" href="./css/popup.css">
   <title>Cozy House - Our Pets</title>
 </head>
 <body>
@@ -33,6 +34,7 @@
     </div>
   </header>
   <main class="main">
+    <div class="pets-popup"></div>
     <div class="pets">
       <div class="pets-content content-width">
         <h1 class="pets-heading">
@@ -90,7 +92,7 @@
       <div class="footer-img"></div>
     </div>
   </footer>
-  <script src="./script.js"></script>
   <script src="./pagination.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
